--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>es.salesianos</groupId>
-  <artifactId>ExamenALberto</artifactId>
+  <artifactId>ExamenDani</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>ExamenAlbertoBlesa</name>
+  <name>ExamenDaniel</name>
   <packaging>war</packaging>
   
 	<dependencies>
@@ -39,6 +39,7 @@
 		    <artifactId>log4j-core</artifactId>
 		    <version>2.6.1</version>
 		</dependency>
+		
 
 
 	</dependencies>
